i dont know shit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                     <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
                     </a>
-                    <a href="#!" class="brand-logo black-text"><img src="images/Logo_.jpg%20copy.png"></a>
+                    <a href="#!" class="brand-logo black-text">
+                        <img src="images/Logo_.jpg%20copy.png">
+                    </a>
                     <ul class="right hide-on-med-and-down">
                         <li>
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="index.html">Home</a>
@@ -54,7 +56,7 @@
                 <a class="waves-effect" href="index.html">Home</a>
             </li>
             <li>
-                <a class="waves-effect" href="Hackathon.html">Hackathon</a>
+                <a class="waves-effect" href="hackathon.html">Hackathon</a>
             </li>
             <li>
                 <a class="waves-effect" href="conference.html">Conference</a>
@@ -98,7 +100,9 @@
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
-                <h3 class="center light orange-text text-darken-4 ">Some highlights of event</h3>
+                <h3 class="center light orange-text text-darken-4 ">IndNX 4.0</h3>
+                <h5 class="center light orange-text text-darken-4 ">Smart Industries Hackathon</h5>
+
                 <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
                     Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph
                     text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
@@ -136,6 +140,37 @@
 
         <div class="divider"></div>
 
+
+        <div class="parallax-container">
+
+            <div class="valign-wrapper full-height">
+                <div class="container full-width">
+
+                    <h3 class="light center white-text">Register</h3>
+                    <p class="center">Ssome details about registeration if any.</p>
+                    <p class="center">
+                        <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
+                    </p>
+
+                </div>
+            </div>
+
+            <div class="parallax">
+                <img src="images/bookcase-books-bookshelves-159711.jpg" alt="Unsplashed background img 1">
+            </div>
+        </div>
+
+
+
+
+
+        <div class="divider"></div>
+
+
+
+
+
+
         <section class="padded-top-cozy padded-bottom-cozy">
             <div class="container">
 
@@ -143,63 +178,56 @@
 
 
                 <div class="row padded-top-comfortable">
-                    <div class="col s12 m8 offset-m2 l6">
-                        <div class="card medium rounded">
-                            <div class="card-image">
-                                <img class=" zoomer" src="images/parallax.jpg">
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/me.jpg" alt="speaker">
                             </div>
-                            <div class="card-content">
-                                <span class="orange-text text-darken-4 card-title">Speaker name</span>
-                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that
-                                    no on really cares about but it is important to show</p>
-                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Speaker name</h5>
                         </div>
                     </div>
-
-
-                    <div class="col s12 m8 offset-m2 l6">
-                        <div class="card medium rounded">
-                            <div class="card-image">
-                                <img class=" zoomer" src="images/parallax.jpg">
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/me.jpg" alt="speaker">
                             </div>
-                            <div class="card-content">
-                                <span class="orange-text text-darken-4 card-title">Speaker name</span>
-                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that
-                                    no on really cares about but it is important to show</p>
-                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Speaker name</h5>
                         </div>
                     </div>
-
-                </div>
-
-
-                <div class="row padded-top-comfortable">
-                    <div class="col s12 m8 offset-m2 l6">
-                        <div class="card medium rounded">
-                            <div class="card-image">
-                                <img class=" zoomer" src="images/parallax.jpg">
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/me.jpg" alt="speaker">
                             </div>
-                            <div class="card-content">
-                                <span class="orange-text text-darken-4 card-title">Speaker name</span>
-                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that
-                                    no on really cares about but it is important to show</p>
-                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Speaker name</h5>
                         </div>
                     </div>
-
-
-                    <div class="col s12 m8 offset-m2 l6">
-                        <div class="card medium rounded">
-                            <div class="card-image">
-                                <img class=" zoomer" src="images/parallax.jpg">
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/me.jpg" alt="speaker">
                             </div>
-                            <div class="card-content">
-                                <span class="orange-text text-darken-4 card-title">Speaker name</span>
-                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that
-                                    no on really cares about but it is important to show</p>
-                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Speaker name</h5>
                         </div>
                     </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/me.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Speaker name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/me.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Speaker name</h5>
+                        </div>
+                    </div>
+                    
+
 
                 </div>
 
@@ -214,7 +242,7 @@
 
             <h3 class="center light orange-text text-darken-4 padded-bottom-comfortable">About the organizers</h3>
 
-            <div class="row no-margin  grey lighten-2">
+            <div class="row no-margin grey lighten-2">
 
                 <img class="col no-padding s12 l5" src="images/hero-slider/3.jpg" alt="image">
                 <div class="col s12 l7">
@@ -267,29 +295,9 @@
                 </div>
             </div>
         </section>
-        <div class="divider"></div>
 
 
 
-
-    <div id="index-banner" class="parallax-container">
-        <div class="section no-pad-bot">
-            <div class="container">
-                <br><br> <br> <br><br><br>
-
-                <div class="row center">
-                    <h3 class="center white-text">Register</h3>
-                    <p class="center white-text">some details about registration process</p>
-                    <p class="center">
-                        <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
-                    </p>
-                </div>
-                <br><br>
-
-            </div>
-        </div>
-        <div class="parallax"><img src="images/bookcase-books-bookshelves-159711.jpg" alt="Unsplashed background img 1"></div>
-    </div>
 
 
 
@@ -310,12 +318,13 @@
 
     </main>
 
-       <footer class="page-footer white" style="border-top: 8px solid orange">
+    <footer class="page-footer white" style="border-top: 8px solid orange">
         <div class="container">
             <div class="row">
                 <div class="col l6 s6">
                     <h5 class="black-text">INDnX 4.0</h5>
-                    <p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative from diffrent sectors and Institutes</p>
+                    <p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
+                        from diffrent sectors and Institutes</p>
                 </div>
                 <div class="col l1 offset-l2 s3">
                     <h5 class="black-text">Sitemap</h5>
