--- a/conference.html
+++ b/conference.html
@@ -128,12 +128,25 @@
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
-                <h2 class="center light orange-text text-darken-4 ">Some highlights of event</h2>
+                <h2 class="center light orange-text " data-aos="zoom-in">Some highlights of event</h2>
                 <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
             </div>
         </section>
-        <div class="divider"></div>
 
+
+
+       <div class=" row center" id="details">
+          <div class="col s6">
+                  <h2 class="center light orange-text " data-aos="zoom-in">Date</h2>
+           <h3 class="center light ">28 Sept 2k18</h3>
+          </div>
+          <div class="col s6">
+
+           <h2 class="center light orange-text " data-aos="zoom-in">Venue</h2>
+           <h3 class="center light black-text">TCS Mihan</h3>
+          </div>
+
+       </div>
         <div class="divider"></div>
 
         <section class="padded-top-comfortable">
@@ -194,6 +207,81 @@
 
             </div>
         </section>
+
+
+       <section>
+            <div class="row container padded-top-cozy">
+                <h3 class="orange-text text-lighten-2 center padded-bottom-cozy">Topic</h3>
+
+
+
+
+
+
+                <ul class="collapsible expandable">
+                    <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">Topic Name</p>
+                        </div>
+                        <div class="collapsible-body">
+                            <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd
+                                vagb yy wfe syfk bib ygergyb</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">Topic Name</p>
+                        </div>
+                        <div class="collapsible-body">
+                            <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd
+                                vagb yy wfe syfk bib ygergyb</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">Topic Name</p>
+                        </div>
+                        <div class="collapsible-body">
+                            <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd
+                                vagb yy wfe syfk bib ygergyb</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">Topic Name</p>
+                        </div>
+                        <div class="collapsible-body">
+                            <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd
+                                vagb yy wfe syfk bib ygergyb</p>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header valign-wrapper   ">
+                            <i class="material-icons orange-text">adjust</i>
+                            <p class="grey-text text-darken-2">Topic Name</p>
+                        </div>
+                        <div class="collapsible-body">
+                            <p>asdfghkdsf sf nsdjkfs skfvs rgdgvd jfdkff bsfjebfferffsfbsf fufbe wef uewfb ev yfwfs ejf bfsd
+                                vagb yy wfe syfk bib ygergyb</p>
+                        </div>
+                    </li>
+
+                </ul>
+
+
+
+
+            </div>
+
+
+        </section>
+
+
+
 
 
         <div class="divider"></div>
