--- a/conference.html
+++ b/conference.html
@@ -212,12 +212,6 @@
        <section>
             <div class="row container padded-top-cozy">
                 <h3 class="orange-text text-lighten-2 center padded-bottom-cozy">Topic</h3>
-
-
-
-
-
-
                 <ul class="collapsible expandable">
                     <li>
                         <div class="collapsible-header valign-wrapper   ">
@@ -322,19 +316,19 @@
                     <br>
                     <ul>
                         <li>
-                            <a class="waves-effect black-text" href="#">FAQ's</a>
+                            <a class="waves-effect black-text" href="faq.html">FAQ's</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="#">Terms</a>
+                            <a class="waves-effect black-text" href="terms.html">Terms</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="#">Mentors</a>
+                            <a class="waves-effect black-text" href="mentors.html">Mentors</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="#">Support</a>
+                            <a class="waves-effect black-text" href="support.html">Support</a>
                         </li>
                         <li>
-                            <a class="waves-effect black-text" href="#">Privacy Policy</a>
+                            <a class="waves-effect black-text" href="privacypolicy.html">Privacy Policy</a>
                         </li>
 
                     </ul>
