--- a/mentors.html
+++ b/mentors.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/hackathon.css">
+
+    <link rel="stylesheet" href="css/mentors.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -74,27 +75,38 @@
     <main>
 
         <section>
-            <div class="parallax-container">
+            <div class="parallax-container" style="height: 78vh">
                 <div class="valign-wrapper full-height">
                     <div class="container full-width">
 
-                        <h1 class="light center white-text">SMART INDUSTRIAL HACKATHON</h1>
-                        <p class="center">
-                            <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
-                        </p>
-
-                    </div>
+                        <h1 class="light center white-text">SMART INDUSTRIAL HACKATHON <br>MENTORS</h1>
+                        </div>
                 </div>
                 <div class="parallax">
-                    <img src="images/business-commerce-computer-132700.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);">
+                    <img src="images/adventure-ancient-antique-697662.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);">
                 </div>
             </div>
         </section>
+        <br>
         <div class="center">
             <h3 class="light orange-text">Mentors</h3>
-            <p></p>
+        </div>
+        <br>
+        <div class="divider" id="divider">
+
         </div>
 
+        <div class="center">
+            <h5>NOTE</h5>
+            <h6>Every team will be alloted mentor depending upon thier needs</h6>
+        </div>
+        <br>
+        <div class="divider" id="divider">
+
+        </div>
+       <section>
+           <h2 class="center orange-text" data-aos="zoom-in">TECH MENTOR</h2>
+       </section>
     </main>
     <br><br>
 
@@ -159,6 +171,18 @@
             </div>
         </div>
     </footer>
+
+
+
+
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/materialize.min.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/tilt.jquery.min.js"></script>
+    <script src="js/script.js"></script>
+
+
 
 </body>
 
