--- a/hackathon.html
+++ b/hackathon.html
@@ -11,14 +11,20 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/hackathon.css">
-    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> -->
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
 
 </head>
-
+<style>
+    *{
+        font-family: 'Montserrat', sans-serif;
+    }
+</style>
 <body>
 
     <!-- Navbar -->
@@ -100,15 +106,34 @@
         </section>
 
 
-        <section class="padded-cozy">
+           <div id="domain">
+            <h2 class="center light" style="color: orange">Domain</h2>
+            <p class="center" style="word-spacing: 2px; font-size: 22px;">
+                1.   Life Science, Textile, Healthcare & Pharmacy
+                <br>
+                2.   Automobile, Defence & Aerospace
+                <br>
+                3.   Logistics, Supply Chain & Warehousing
+                <br>
+                4.   Travel, Transport & Hospitality
+                <br>
+                5.   Agriculture & Food Processing
+                <br>
+                6.   Energy & Environment
+                <br>
+                7.   Government & Citizen Services
+
+            </p>
+        </div>
+        <!--<section class="padded-cozy">
             <div class="container">
                 <div class="row">
-                    <div class="col s12 m8 push-m2 l6 push-l3 full-width rounded grey lighten-2">
+                    <div class="col s6 m8 push-m2 l6 push-l3 full-width rounded grey lighten-2">
                         <!-- <div class=" grey lighten-2">
                     <span class="left orange-text text-lighten-2">
                         <i class="material-icons">calendar_today</i> July 27, 2018</span>
                     <span class="right orange-text text-lighten-2"><i class="material-icons">location_on</i> TCS Mihan</span>
-                </div> -->
+                </div>
 
                         <h4 class="orange-text text-darken-2 center light padded-compact">Schedule</h4>
 
@@ -145,7 +170,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section>-->
         <div class="divider"></div>
 
 
