--- a/mentors.html
+++ b/mentors.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>IndNX 4.0 | FAQ's</title>
+    <title>IndNX 4.0 | Mentors</title>
 
     <link rel="stylesheet" href="css/materialize.min.css">
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
-
     <link rel="stylesheet" href="css/mentors.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
@@ -104,9 +102,69 @@
         <div class="divider" id="divider">
 
         </div>
-       <section>
-           <h2 class="center orange-text" data-aos="zoom-in">TECH MENTOR</h2>
-       </section>
+
+        <section class="padded-top-cozy padded-bottom-cozy">
+            <div class="container">
+               <h2 class="center orange-text" data-aos="zoom-in">TECH MENTOR</h2>
+
+                <div class="row padded-top-comfortable">
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                        </div>
+                    </div>
+
+
+
+                </div>
+
+            </div>
+
+
+        </section>
     </main>
     <br><br>
 
