--- a/mentors.html
+++ b/mentors.html
@@ -110,50 +110,46 @@
                 <div class="row padded-top-comfortable">
                     <div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center">
+                            <div class="img-speaker center modal-trigger" data-target="modal1" >
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center">
+                            <div class="img-speaker center modal-trigger" data-target="modal1" >
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
-                    </div>
-                    <div class="col s6 l4 margined-bottom-comfortable">
+                    </div><div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center">
+                            <div class="img-speaker center modal-trigger" data-target="modal1" >
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
-                    </div>
-                    <div class="col s6 l4 margined-bottom-comfortable">
+                    </div><div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center">
+                            <div class="img-speaker center modal-trigger" data-target="modal1" >
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
-                    </div>
-                    <div class="col s6 l4 margined-bottom-comfortable">
+                    </div><div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center">
+                            <div class="img-speaker center modal-trigger" data-target="modal1" >
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
-                    </div>
-                    <div class="col s6 l4 margined-bottom-comfortable">
+                    </div><div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center">
+                            <div class="img-speaker center modal-trigger" data-target="modal1" >
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
-                            <h5 class="light orange-text text-darken-2 center">Mentor Name</h5>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
                     </div>
 
@@ -165,6 +161,16 @@
 
 
         </section>
+
+        <div id="modal1" class="modal">
+    <div class="modal-content">
+      <h4>Modal Header</h4>
+      <p>A bunch of text</p>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+    </div>
+  </div>
     </main>
     <br><br>
 
