--- a/mentors.html
+++ b/mentors.html
@@ -78,7 +78,7 @@
                     <div class="container full-width">
 
                         <h1 class="light center white-text">SMART INDUSTRIAL HACKATHON <br>MENTORS</h1>
-                        </div>
+                    </div>
                 </div>
                 <div class="parallax">
                     <img src="images/adventure-ancient-antique-697662.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);">
@@ -105,12 +105,12 @@
 
         <section class="padded-top-cozy padded-bottom-cozy">
             <div class="container">
-               <h2 class="center orange-text" data-aos="zoom-in">TECH MENTOR</h2>
+                <h2 class="center orange-text" data-aos="zoom-in">TECH MENTOR</h2>
 
                 <div class="row padded-top-comfortable">
                     <div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center modal-trigger" data-target="modal1" >
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
                             <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
@@ -118,35 +118,39 @@
                     </div>
                     <div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center modal-trigger" data-target="modal1" >
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
                             <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
-                    </div><div class="col s6 l4 margined-bottom-comfortable">
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center modal-trigger" data-target="modal1" >
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
                             <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
-                    </div><div class="col s6 l4 margined-bottom-comfortable">
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center modal-trigger" data-target="modal1" >
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
                             <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
-                    </div><div class="col s6 l4 margined-bottom-comfortable">
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center modal-trigger" data-target="modal1" >
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
                             <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
-                    </div><div class="col s6 l4 margined-bottom-comfortable">
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
                         <div class="speaker">
-                            <div class="img-speaker center modal-trigger" data-target="modal1" >
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
                                 <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
                             </div>
                             <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
@@ -163,14 +167,25 @@
         </section>
 
         <div id="modal1" class="modal">
-    <div class="modal-content">
-      <h4>Modal Header</h4>
-      <p>A bunch of text</p>
-    </div>
-    <div class="modal-footer">
-      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
-    </div>
-  </div>
+            <div class="modal-content">
+                <h4>Tech Mentor</h4>
+                <p></p>
+            </div>
+            <div class="row">
+                <div class="col s6">
+                    <h3>MENTOR NAME </h3>
+                    <h5>Feilds</h5>
+                    <p>Experience, thoughts <br> TEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXT <br>TEXTTEXTTEXTTEXTTEXTTEXTTEXTTEXTTE
+                    <br>XTTEXTTEXTTEXTTEXT</p>
+                </div>
+                <div class="col s6" id="secondcol">
+                    <img src="images/adult-agreement-beard-618550.jpg" alt="">
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a href="#!" class="modal-close waves-effect waves-green btn-flat">Agree</a>
+            </div>
+        </div>
     </main>
     <br><br>
 
