--- a/mentors.html
+++ b/mentors.html
@@ -156,15 +156,70 @@
                             <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
                         </div>
                     </div>
-
-
-
                 </div>
-
             </div>
-
-
         </section>
+
+        <div class="divider" id="divider"></div>
+
+
+        <section class="padded-top-cozy padded-bottom-cozy">
+            <div class="container">
+                <h2 class="center orange-text" data-aos="zoom-in">INDUSTRY MENTOR</h2>
+
+                <div class="row padded-top-comfortable">
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                        </div>
+                    </div>
+                    <div class="col s6 l4 margined-bottom-comfortable">
+                        <div class="speaker">
+                            <div class="img-speaker center modal-trigger" data-target="modal1">
+                                <img src="images/adult-agreement-beard-618550.jpg" alt="speaker">
+                            </div>
+                            <h5 class="light center modal-trigger" data-target="modal1" id="name">Mentor Name</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
 
         <div id="modal1" class="modal">
             <div class="modal-content">
