--- a/contact.html
+++ b/contact.html
@@ -186,6 +186,9 @@
                         <li>
                             <a class="waves-effect black-text" href="contact.html">Contact</a>
                         </li>
+                        <li>
+                            <a class="waves-effect black-text" href="faq.html">FAQ</a>
+                        </li>
 
                     </ul>
                 </div>
