--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                         <li>
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="contact.html">Contact</a>
                         </li>
+                        <li>
+                            <a class="waves-effect waves-orange grey-text text-darken-2 " href="faq.html">FAQ</a>
+                        </li>
                     </ul>
                 </div>
             </nav>
@@ -64,6 +67,9 @@
             </li>
             <li>
                 <a class="waves-effect" href="contact.html">Contact</a>
+            </li>
+            <li>
+                <a class="waves-effect" href="faq.html">FAQ</a>
             </li>
         </ul>
 
