--- a/about.html
+++ b/about.html
@@ -82,19 +82,21 @@
 
 
 
-     <div id="index-banner" class="parallax-container" style="height: 70vh">
-            <div class="section no-pad-bot">
-                <div class="container">
-                    <br><br>
-                    <br><br><br><br><br><br>
-                    <h1 class="header center white-text" style="font-size: 90px;">About</h1>
+        <section>
+            <div class="parallax-container">
+                <div class="valign-wrapper full-height">
+                    <div class="container full-width">
+                        <h1 class="light center white-text">About</h1>
+                    </div>
+                </div>
+                <div class="parallax">
+                    <img src="images/blackboard-business-chalkboard-355988.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);">
                 </div>
             </div>
-            <div class="parallax"><img src="images/blackboard-business-chalkboard-355988.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);"></div>
-        </div>
+        </section>
 
 
-
+<!--
 
         <div class="row container">
 
@@ -147,6 +149,8 @@
             </p>
         </div>
         <br>
+
+    -->
         <div class="divider"></div>
 
        <div>
