--- a/conference.html
+++ b/conference.html
@@ -25,7 +25,9 @@
                     <a href="#" data-target="slide-out" class="sidenav-trigger hide-on-large grey-text text-darken-2">
                         <i class="material-icons">menu</i>
                     </a>
-                    <a href="index.html" class="brand-logo black-text"><img src="images/Logo_.jpg%20copy.png"></a>
+                    <a href="index.html" class="brand-logo black-text">
+                        <img src="images/Logo_.jpg%20copy.png">
+                    </a>
                     <ul class="right hide-on-med-and-down">
                         <li>
                             <a class="waves-effect waves-orange grey-text text-darken-2 " href="index.html">Home</a>
@@ -78,69 +80,89 @@
     </header>
 
     <main>
+
         <section>
-
-            <div class="slider" id="hero-slider">
-
-                <ul class="slides">
-
-                    <li>
-                        <img src="images/hero-slider/1.jpg">
-                        <div class="caption center">
-                            <h1 data-tilt>CII-CONFERENCE</h1>
-                            <p>Date: XX Month 2018</p>
-                            <a data-tilt href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="images/hero-slider/2.jpg">
-                        <div class="caption center">
-                            <h1 data-tilt>CII-CONFERENCE</h1>
-                            <p>Date: XX Month 2018</p>
-                            <a data-tilt href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="images/hero-slider/3.jpg">
-                        <div class="caption center">
-                            <h1 data-tilt>CII-CONFERENCE</h1>
-                            <p>Date: XX Month 2018</p>
-                            <a data-tilt href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="images/hero-slider/4.jpg">
-                        <div class="caption center">
-                            <h1 data-tilt>CII-CONFERENCE</h1>
-                            <p>Date: XX Month 2018</p>
-                            <a data-tilt href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
-                        </div>
-                    </li>
-
-                </ul>
+            <div class="parallax-container">
+                <div class="valign-wrapper full-height">
+                    <div class="container full-width">
+                        <h1 class="light center white-text">Conference</h1>
+                    </div>
+                </div>
+                <div class="parallax">
+                    <img src="images/hero-slider/2.jpg" alt="Unsplashed background img 1" style="opacity: 0.9;    filter: brightness(50%) saturate(150%);">
+                </div>
             </div>
         </section>
 
-        <div class="divider"></div>
+        <!--  <div class="divider"></div>
 
 
         <section class="padded-cozy">
             <div class="container">
 
-                <!--<h6 class="center light grey-text">About</h6>-->
+                <!--<h6 class="center light grey-text">About</h6>--
                 <h2 class="center light orange-text text-darken-4 ">Some highlights of event</h2>
-                <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. </p>
+                <p class="center  text-darken-2 padded-top-compact flow-text light">Some paragraph with description of event. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
+                    Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph
+                    text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text. Paragraph text.
+                    Paragraph text. Paragraph text. Paragraph text. </p>
             </div>
         </section>
-        <div class="divider"></div>
+ -->
 
+        <section class="padded-cozy">
+            <div class="container">
+                <div class="row">
+                    <div class="col s12 m8 push-m2 l6 push-l3 full-width rounded grey lighten-2">
+                        <!-- <div class=" grey lighten-2">
+            <span class="left orange-text text-lighten-2">
+                <i class="material-icons">calendar_today</i> July 27, 2018</span>
+            <span class="right orange-text text-lighten-2"><i class="material-icons">location_on</i> TCS Mihan</span>
+        </div> -->
+
+                        <h4 class="orange-text text-darken-2 center light padded-compact">Schedule</h4>
+
+                        <h5 class="center grey-text text-darken-2 light">registration deadline
+                            <br>
+                            <span class="grey-text text-darken-4">21 july 2018</span>
+                        </h5>
+                        <h5 class="center grey-text text-darken-2 light">registration deadline
+                            <br>
+                            <span class="grey-text text-darken-4">21 july 2018</span>
+                        </h5>
+                        <h5 class="center grey-text text-darken-2 light">registration deadline
+                            <br>
+                            <span class="grey-text text-darken-4">21 july 2018</span>
+                        </h5>
+
+                        <div class="divider"></div>
+
+                        <h4 class="orange-text text-darken-2 center light padded-bottom-compact  padded-top-compact">Venue</h4>
+
+                        <h5 class="center grey-text text-darken-2 light">registration deadline
+                            <br>
+                            <span class="grey-text text-darken-4">21 july 2018</span>
+                        </h5>
+                        <h5 class="center grey-text text-darken-2 light">registration deadline
+                            <br>
+                            <span class="grey-text text-darken-4">21 july 2018</span>
+                        </h5>
+                        <h5 class="center grey-text text-darken-2 light">registration deadline
+                            <br>
+                            <span class="grey-text text-darken-4">21 july 2018</span>
+                        </h5>
+                        <div class="padded-bottom-cozy"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
         <div class="divider"></div>
 
         <section class="padded-top-comfortable">
 
             <h2 class="center light orange-text text-darken-4 padded-bottom-comfortable ">Speakers</h2>
 
-            <div class="row padded-top-comfortable">
+            <div class="padded-top-comfortable">
                 <div class="row container">
                     <div class="col s6 m6 offset-m2 l6">
                         <div class="card medium rounded">
@@ -149,7 +171,8 @@
                             </div>
                             <div class="card-content">
                                 <span class="orange-text text-darken-4 card-title">Speaker name</span>
-                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no on really cares about but it is important to show</p>
+                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that
+                                    no on really cares about but it is important to show</p>
                             </div>
                         </div>
                     </div>
@@ -161,7 +184,8 @@
                             </div>
                             <div class="card-content">
                                 <span class="orange-text text-darken-4 card-title">Speaker name</span>
-                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no on really cares about but it is important to show</p>
+                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that
+                                    no on really cares about but it is important to show</p>
                             </div>
                         </div>
                     </div>
@@ -174,7 +198,8 @@
                             </div>
                             <div class="card-content">
                                 <span class="orange-text text-darken-4 card-title">Speaker name</span>
-                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no on really cares about but it is important to show</p>
+                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that
+                                    no on really cares about but it is important to show</p>
                             </div>
                         </div>
                     </div>
@@ -186,7 +211,8 @@
                             </div>
                             <div class="card-content">
                                 <span class="orange-text text-darken-4 card-title">Speaker name</span>
-                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no on really cares about but it is important to show</p>
+                                <p>lots of info about speaker like his designation, achivements, qualifications and stuff that
+                                    no on really cares about but it is important to show</p>
                             </div>
                         </div>
                     </div>
@@ -205,7 +231,8 @@
             <div class="row">
                 <div class="col l6 s6">
                     <h5 class="black-text">INDnX 4.0</h5>
-                    <p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative from diffrent sectors and Institutes</p>
+                    <p class="black-text">To bring together the potential IOT specialist IOT consumers and IOT service Providers with representative
+                        from diffrent sectors and Institutes</p>
                 </div>
                 <div class="col l1 offset-l2 s3">
                     <h5 class="black-text">Sitemap</h5>
@@ -267,7 +294,7 @@
     <script src="js/aos.js"></script>
     <script src="js/tilt.jquery.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/home.js"></script>
+
 </body>
 
 </html>
