--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <div class="container full-width">
 
                     <h3 class="light center white-text">Register</h3>
-                    <p class="center">Ssome details about registeration if any.</p>
+                    <p class="center light white-text">Ssome details about registeration if any.</p>
                     <p class="center">
                         <a href="https://reg.form.link" class="btn btn-register-hero btn-large btn-flat white-text">Register now</a>
                     </p>
