--- a/conference.html
+++ b/conference.html
@@ -121,9 +121,6 @@
             </div>
         </section>
 
-        <div class="divider"></div>
-
-
         <section class="padded-cozy">
             <div class="container">
 
@@ -137,13 +134,13 @@
 
        <div class=" row center" id="details">
           <div class="col s6">
-                  <h2 class="center light orange-text " data-aos="zoom-in">Date</h2>
-           <h3 class="center light ">28 Sept 2k18</h3>
+                  <h4 class="center light orange-text ">Date</h4>
+           <h3 class="center light " data-aos="zoom-in">28 Sept 2k18</h3>
           </div>
           <div class="col s6">
 
-           <h2 class="center light orange-text " data-aos="zoom-in">Venue</h2>
-           <h3 class="center light black-text">TCS Mihan</h3>
+           <h4 class="center light orange-text ">Venue</h4>
+           <h3 class="center light black-text" data-aos="zoom-in">TCS Mihan</h3>
           </div>
 
        </div>
@@ -151,17 +148,17 @@
 
         <section class="padded-top-comfortable">
 
-            <h2 class="center light orange-text text-darken-4 padded-bottom-comfortable ">Speakers</h2>
+            <h2 class="center light orange-text padded-bottom-comfortable ">Speakers</h2>
 
             <div class="row padded-top-comfortable">
                 <div class="row container">
                     <div class="col s6 m6 offset-m2 l6">
                         <div class="card medium rounded">
                             <div class="card-image">
-                                <img class=" zoomer" src="images/parallax.jpg">
+                                <img class=" zoomer" src="images/adult-agreement-beard-618550%20copy.jpg">
                             </div>
                             <div class="card-content">
-                                <span class="orange-text text-darken-4 card-title">Speaker name</span>
+                                <span class="orange-text card-title">Speaker name</span>
                                 <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no on really cares about but it is important to show</p>
                             </div>
                         </div>
@@ -170,10 +167,10 @@
                     <div class="col s6 m6 offset-m2 l6">
                         <div class="card medium rounded">
                             <div class="card-image">
-                                <img class=" zoomer" src="images/parallax.jpg">
+                                <img class=" zoomer" src="images/adult-agreement-beard-618550%20copy.jpg">
                             </div>
                             <div class="card-content">
-                                <span class="orange-text text-darken-4 card-title">Speaker name</span>
+                                <span class="orange-text card-title">Speaker name</span>
                                 <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no on really cares about but it is important to show</p>
                             </div>
                         </div>
@@ -183,10 +180,10 @@
                     <div class="col s6 m6 offset-m2 l6">
                         <div class="card medium rounded">
                             <div class="card-image">
-                                <img class=" zoomer" src="images/parallax.jpg">
+                                <img class=" zoomer" src="images/adult-agreement-beard-618550%20copy.jpg">
                             </div>
                             <div class="card-content">
-                                <span class="orange-text text-darken-4 card-title">Speaker name</span>
+                                <span class="orange-text card-title">Speaker name</span>
                                 <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no on really cares about but it is important to show</p>
                             </div>
                         </div>
@@ -195,10 +192,10 @@
                     <div class="col s6 m6 offset-m2 l6">
                         <div class="card medium rounded">
                             <div class="card-image">
-                                <img class=" zoomer" src="images/parallax.jpg">
+                                <img class=" zoomer" src="images/adult-agreement-beard-618550%20copy.jpg">
                             </div>
                             <div class="card-content">
-                                <span class="orange-text text-darken-4 card-title">Speaker name</span>
+                                <span class="orange-text card-title">Speaker name</span>
                                 <p>lots of info about speaker like his designation, achivements, qualifications and stuff that no on really cares about but it is important to show</p>
                             </div>
                         </div>
