--- a/conference.html
+++ b/conference.html
@@ -124,7 +124,8 @@
             </div>
         </section>
 
-        <section class="padded-cozy">
+        <section>
+           <br>
             <div class="container">
 
                 <!--<h6 class="center light grey-text">About</h6>-->
