--- a/faq.html
+++ b/faq.html
@@ -10,13 +10,19 @@
     <link rel="stylesheet" href="css/aos.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/hackathon.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:100,300" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400" rel="stylesheet">
+
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
 
 </head>
+<style>
+      *{
+        font-family: 'Montserrat', sans-serif;
+    }
+</style>
 
 <body>
     <header>
