--- a/hackathon.html
+++ b/hackathon.html
@@ -362,7 +362,7 @@
             </div>
 
             <p class="center">
-                            <a href="https://reg.form.link" class="btn btn-registerr-hero btn-large btn-flat orange-text">Register now</a>
+                            <a href="https://reg.form.link" class="btn btn-registerr-hero btn-large btn-flat ">Register now</a>
                         </p>
 
         </section>
