--- a/conference.html
+++ b/conference.html
@@ -88,7 +88,7 @@
                 <ul class="slides">
 
                     <li>
-                        <img src="images/hero-slider/1.jpg">
+                        <img src="images/conference/con1.jpg">
                         <div class="caption center">
                             <h1 data-tilt>CII-CONFERENCE</h1>
                             <p>Date: XX Month 2018</p>
@@ -96,7 +96,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="images/hero-slider/2.jpg">
+                        <img src="images/conference/con2.jpg">
                         <div class="caption center">
                             <h1 data-tilt>CII-CONFERENCE</h1>
                             <p>Date: XX Month 2018</p>
@@ -104,7 +104,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="images/hero-slider/3.jpg">
+                        <img src="images/conference/con3.jpg">
                         <div class="caption center">
                             <h1 data-tilt>CII-CONFERENCE</h1>
                             <p>Date: XX Month 2018</p>
@@ -112,7 +112,7 @@
                         </div>
                     </li>
                     <li>
-                        <img src="images/hero-slider/4.jpg">
+                        <img src="images/conference/con4.jpg">
                         <div class="caption center">
                             <h1 data-tilt>CII-CONFERENCE</h1>
                             <p>Date: XX Month 2018</p>
